@@ -24,7 +24,15 @@ Version 1.0.xxx (Oktober xxth 2013)
 - Fixed: Editing (changing the name) of security devices
 - Implemented: Added Visibility/Solar Radiation to Lua scripts
 - Implemented: Razberry Smoke Alarm
-- Changed: Rain values will now update realtime (was every 5 minutes)
+- Changed: Rain values will now update in realtime (was every 5 minutes)
+- Implemented: Added otherdevices_dewpointto Lua scripts
+- Implemented: Added otherdevices_rain to Lua scripts
+- Implemented: Added otherdevices_rain_lasthour to Lua scripts
+- Implemented: Added otherdevices_uv to Lua scripts
+- Implemented: Added otherdevices_winddir to Lua scripts
+- Implemented: Added otherdevices_windspeed to Lua scripts
+- Implemented: Added otherdevices_windgust to Lua scripts
+
 
 Version 1.0.1087 (Oktober 16th 2013)
 - Implemented: Login page (solves the caching problems)
